@@ -1,3 +1,9 @@
+2005-04-12  Ulrich Drepper  <drepper@redhat.com>
+
+	* stdlib/random_r.c (__initstate_r): Don't use non-existing state.
+	* string/tst-strfry.c: New file.
+	* string/Makefile (tests): Add tst-strfry.
+
 2005-04-11  James A. Morrison  <ja2morri@uwaterloo.ca>
 
 	* manual/string.texi: Fix typo in wmemcpy decl.
